@@ -131,10 +131,28 @@ function setCustomerType(id)
 					<TD width="1%">
 						<IMG src="img/calendar.gif" alt="">
 					</TD>
-					<TD width="96%" nowrap>
-						<B>{t}Period:{/t}</B>&nbsp;
+					<TD width="1%" nowrap>
+						<B>{t}Period:{/t}</B>
 						{t}From{/t}&nbsp;<INPUT TYPE="text" NAME="balancefrom" SIZE="10" MAXSIZE="10" OnClick="javascript:cal1.popup();" {tip text="Enter date in 'yyyy/mm/dd' format or click to choose it from calendar"}>
 						{t}To{/t}&nbsp;<INPUT TYPE="text" NAME="balanceto" SIZE="10" MAXSIZE="10" OnClick="javascript:cal2.popup();" {tip text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>	
+					</TD>
+					<TD width="1%">
+						<NOBR><IMG src="img/network.gif" alt=""> <B>{t}Network:{/t}</B></NOBR><BR><BR>
+						<NOBR><IMG src="img/group.gif" alt=""> <B>{t}Group:{/t}</B></NOBR>
+					</TD>
+					<TD width="93%">
+						<SELECT size="1" name="network" {tip text="Select network"}>
+							<OPTION value="0" SELECTED>{t}- all networks -{/t}</OPTION>
+							{section name="networks" loop=$networks}
+							<OPTION value="{$networks[networks].id}">{$networks[networks].name|truncate:40:"...":true}</OPTION>
+							{/section}
+						</SELECT><BR><BR>
+						<SELECT size="1" name="customergroup" {tip text="Select group"}>
+							<OPTION value="0" SELECTED>{t}- all groups -{/t}</OPTION>
+							{section name="customergroups" loop=$customergroups}
+							<OPTION value="{$customergroups[customergroups].id}">{$customergroups[customergroups].name|truncate:40:"...":true}</OPTION>
+							{/section}
+						</SELECT>
 					</TD>
 				</TR>
 			</TABLE>
